fix: fixing the header spacing on mobile
Refs: #177

--- a/web-application/client/components/generic/Page.css
+++ b/web-application/client/components/generic/Page.css
@@ -40,7 +40,7 @@
         margin: 0 auto;
         grid-row: 3 / 4;
         width: 100%;
-        padding-top: 10px;
+        padding-top: 30px;
     }
 }
 @media (width <= 700px) {
@@ -62,6 +62,6 @@
         margin: 0 auto;
         grid-row: 3 / 4;
         width: 100%;
-        padding-top: 10px;
+        padding-top: 30px;
     }
 }
